Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBoolObjIntObj.quorum
class main
    action Main
        Integer i
        Boolean bool
        i:setValue(5)
        bool = cast(Boolean, i)
    end
end